--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,14 @@
       >
       </av-writer>
 
+      <!-- <av-writer
+        source="http://localhost:3000/media/audio-video/dream.mp3"
+        transcript-url="http://localhost:3000/media/audio-video/transcripts/mlk-dream.json"
+        poster="http://localhost:3000/media/images/atlanta-3.png"
+        playback-rate="1.5"
+      >
+      </av-writer> -->
+
       <!-- Main content end -->
     </main>
     <!-- Scripts -->
